# multi_ai_agents_system

./: README.md  pyproject.toml
app/: main.py
app/agents/: base_agent.py  communication_agent.py  coordinator_agent.py  data_agent.py  decision_agent.py
app/services/: groq_service.py
